--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=LIT
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://learn-it-by-tap-app.herokuapp.com
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
