--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production",
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
         "heroku-postbuild": "npm run prod"
     },
     "devDependencies": {
