--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "start": "node app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "heroku-postbuild": "npm run prod"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
