--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,20 @@
         }
     },
     "scripts": {
-    },
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
+        ],
+        "compile": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ]
+    }    },
     "extra": {
         "laravel": {
             "dont-discover": []
